--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -70,6 +70,18 @@
   timestamp = {2019.04.01},
 }
 
+@Article{Abell2004,
+  author    = {Abell, P.},
+  title     = {Narrative Explanation: An Alternative to Variable-Centered Explanation?},
+  journal   = {Annual Review of Sociology},
+  year      = {2004},
+  volume    = {30},
+  pages     = {287-310},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://www.jstor.org/stable/29737695},
+}
+
 @Book{Abrams1999,
   title     = {A Glossary of Literary Terms},
   publisher = {Harcourt Brace College Publisher},
@@ -964,6 +976,18 @@
   doi       = {10.1073/pnas.200327197},
   owner     = {Vincent},
   timestamp = {2011.12.16},
+}
+
+@Article{Amati2019,
+  author    = {Amati, V. and Lomi, A. and Mascia, D.},
+  title     = {Some days are better than others: Examining time-specific variation in the structuring of interorganizational relations},
+  journal   = {Social Networks},
+  year      = {2019},
+  volume    = {57},
+  pages     = {18-33},
+  doi       = {10.1016/j.socnet.2018.10.001},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @Article{Amelio2016,
@@ -2200,6 +2224,19 @@
   timestamp = {2020.04.28},
 }
 
+@Article{Bazzini1997,
+  author    = {Bazzini, D. G. and McIntosh, W. D. and Smith, S. M. and Cook, S. and Harris, C.},
+  title     = {The aging woman in popular film: Underrepresented, unattractive, unfriendly, and unintelligent},
+  journal   = {Sex Roles},
+  year      = {1997},
+  volume    = {36},
+  number    = {7-8},
+  pages     = {531-543},
+  doi       = {10.1007/bf02766689},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Bearman2000,
   author    = {Bearman, P. S. and Stovel, K.},
   title     = {Becoming a Nazi: A model for narrative networks},
@@ -3134,6 +3171,30 @@
   timestamp = {2012.07.20},
 }
 
+@Article{Bonacich2001,
+  author    = {Bonacich, P. and Lloyd, P.},
+  title     = {Eigenvector-like measures of centrality for asymmetric relations},
+  journal   = {Social Networks},
+  year      = {2001},
+  volume    = {23},
+  number    = {3},
+  pages     = {191-201},
+  doi       = {10.1016/S0378-8733(01)00038-7},
+  owner     = {Vincent},
+  timestamp = {2017.06.21},
+}
+
+@Book{Bonacich2012,
+  title     = {Introduction to Mathematical Sociology},
+  publisher = {Princeton University Press},
+  year      = {2012},
+  author    = {Bonacich, P. and Lu, P.},
+  groups    = {_General Properties, Complex Networks in General, Complex Networks Intros},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://press.princeton.edu/books/hardcover/9780691145495/introduction-to-mathematical-sociology},
+}
+
 @Book{Bonato2008,
   title     = {A Course on the Web Graph},
   publisher = {American Mathematical Society},
@@ -3661,6 +3722,19 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Brandes2013,
+  author    = {Brandes, U. and Robins, G. and McRanie, A. and Wasserman, S.},
+  title     = {What is network science?},
+  journal   = {Network Science},
+  year      = {2013},
+  volume    = {1},
+  number    = {1},
+  pages     = {1-15},
+  doi       = {10.1017/nws.2013.2},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Brandes2016,
   author    = {Brandes, U. and Borgatti, S. P. and Freeman, L. C.},
   title     = {Maintaining the duality of closeness and betweenness centrality},
@@ -3671,6 +3745,16 @@
   doi       = {10.1016/j.socnet.2015.08.003},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Book{Branigan2013,
+  title     = {Narrative Comprehension and Film},
+  publisher = {Routledge},
+  year      = {2013},
+  author    = {Branigan, E.},
+  doi       = {10.4324/9781315003108},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @Book{Brant2004,
@@ -4889,6 +4973,19 @@
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://books.google.fr/books/about/Story_and_Discourse.html?id=ewrOp9uPjYUC},
+}
+
+@Article{Chatman1980,
+  author    = {Chatman, S.},
+  title     = {What Novels Can Do That Films Can't (And Vice Versa)},
+  journal   = {Critical Inquiry},
+  year      = {1980},
+  volume    = {7},
+  number    = {1},
+  pages     = {121-140},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://www.jstor.org/stable/1343179},
 }
 
 @InProceedings{Chaturvedi2014,
@@ -8148,6 +8245,18 @@
   url       = {http://clg.wlv.ac.uk/papers/evans-00b.pdf},
 }
 
+@Article{Everett2018,
+  author    = {Everett, M. G. and Broccatelli, C. and Borgatti, S. P. and Koskinen, J.},
+  title     = {Measuring knowledge and experience in two mode temporal networks},
+  journal   = {Social Networks},
+  year      = {2018},
+  volume    = {55},
+  pages     = {63-73},
+  doi       = {10.1016/j.socnet.2018.05.003},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InProceedings{Everingham2004,
   author    = {Everingham, M. and Zisserman, A.},
   title     = {Automated Person Identification in Video},
@@ -8240,6 +8349,19 @@
   doi       = {10.1080/20512856.2016.1244909},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Article{Falzon2018,
+  author    = {Falzon, L. and Quintane, E. and Dunn, J. and Robins, G.},
+  title     = {Embedding time in positions: Temporal measures of centrality for social network analysis},
+  journal   = {Social Networks},
+  year      = {2018},
+  volume    = {54},
+  pages     = {168-178},
+  doi       = {10.1016/j.socnet.2018.02.002},
+  groups    = {Dynamic Centrality},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @InProceedings{Fang2006,
@@ -9123,6 +9245,18 @@
   url       = {http://books.google.com/books?id=VcxqQgAACAAJ&dq=The+Development+of+Social+Network+Analysis:+A+Study+in+the+Sociology+of+Science&hl=en&ei=xIlhTIfFONq5jAfU4eifCQ&sa=X&oi=book_result&ct=result&resnum=1&ved=0CCgQ6AEwAA},
 }
 
+@Article{Frermann2018,
+  author    = {Frermann, L. and Cohen, S. B. and Lapata, M.},
+  title     = {Whodunnit? Crime Drama as a Case for Natural Language Understanding},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2018},
+  volume    = {6},
+  pages     = {1-15},
+  doi       = {10.1162/tacl_a_00001},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Freund1997,
   author    = {Freund, Y. and Schapire, R. E.},
   title     = {A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting},
@@ -9571,6 +9705,16 @@
   doi       = {10.1109/WACV.2009.5403123},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Book{Genette1980,
+  title     = {Narrative Discourse: An Essay in Method},
+  publisher = {Cornell University Press},
+  year      = {1980},
+  author    = {Genette, G.},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://archive.org/stream/NarrativeDiscourseAnEssayInMethod/NarrativeDiscourse-AnEssayInMethod_djvu.txt},
 }
 
 @Article{Gerofsky2019,
@@ -10104,6 +10248,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {http://jonathangottschall.com/storytelling-animal},
+}
+
+@Article{Gould1965,
+  author    = {Gould, H. W.},
+  title     = {A variant of Pascal's triangle},
+  journal   = {Fibonacci Quarterly},
+  year      = {1965},
+  volume    = {3},
+  number    = {4},
+  pages     = {257-271},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://www.fq.math.ca/Papers1/43-2/paper43-2-9.pdf},
 }
 
 @Article{Gould1967,
@@ -11061,6 +11218,16 @@
   doi       = {10.3115/1218955.1219008},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Book{Haskell1987,
+  title     = {From Reverence to Rape},
+  publisher = {University of Chicago Press},
+  year      = {1987},
+  author    = {Haskell, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/F/bo25144826.html},
 }
 
 @InProceedings{Hassan2012,
@@ -12223,6 +12390,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
+@Book{Inness2004,
+  title     = {Action Chicks - New Images of Tough Women in Popular Culture},
+  publisher = {Palgrave Macmillan},
+  year      = {2004},
+  author    = {Inness, S. A.},
+  doi       = {10.1057/9781403981240},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InProceedings{Iosif2014,
   author    = {Iosif, E. and Mishra, T.},
   title     = {From Speaker Identification to Affective Analysis: A Multi-Step System for Analyzing Children's Stories},
@@ -12773,6 +12950,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Scenic_form_in_Shakespeare.html?id=_KZlAAAAMAAJ&redir_esc=y},
 }
 
+@Article{Jones2018a,
+  author    = {Jones, P.},
+  title     = {Diana in the World of Men: a character network approach to analysing gendered vocal representation in Wonder Woman},
+  journal   = {Feminist Media Studies},
+  year      = {2018},
+  volume    = {20},
+  number    = {1},
+  pages     = {18-34},
+  doi       = {10.1080/14680777.2018.1510846},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Jones2020,
   author    = {Jones, P. and Quinn, E. and Koskinen, J.},
   title     = {Measuring centrality in film narratives using dynamic character interaction networks},
@@ -13043,6 +13233,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1903.06469},
 }
 
+@Article{Kagan2020,
+  author    = {Kagan, D. and Chesney, T. and Fire, M.},
+  title     = {Using data science to understand the film industry's gender gap},
+  journal   = {Palgrave Communications},
+  year      = {2020},
+  volume    = {6},
+  number    = {1},
+  doi       = {10.1057/s41599-020-0436-1},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InProceedings{Kairam2012,
   author    = {Kairam, S. R. and Wang, D. J. and Leskovec, J.},
   title     = {The life and death of online groups},
@@ -13122,6 +13324,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.16},
 }
 
+@Book{Kaplan1983,
+  title     = {Women and Film: Both Sides of the Camera},
+  publisher = {Methuen},
+  year      = {1983},
+  author    = {Kaplan, E. A.},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://books.google.fr/books/about/Women_and_Film.html?id=398G7nV_-_AC},
+}
+
 @InProceedings{Karamanis2004,
   author    = {Karamanis, N. and Poesio, M. and Mellish, C. and Oberlander, J.},
   title     = {Evaluating centering-based metrics of coherence for text structuring using a reliably annotated corpus},
@@ -13186,6 +13398,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ISM.2011.57},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@Article{Katz1953,
+  author    = {Katz, L.},
+  title     = {A new status index derived from sociometric analysis},
+  journal   = {Psychometrika},
+  year      = {1953},
+  volume    = {18},
+  number    = {1},
+  pages     = {39-43},
+  doi       = {10.1007/bf02289026},
+  owner     = {Vincent},
+  timestamp = {2017.07.15},
 }
 
 @Article{Kazantseva2010,
@@ -13823,6 +14048,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://archive.bridgesmathart.org/2011/bridges2011-579.pdf},
 }
 
+@Article{Kontoleon2013,
+  author    = {Kontoleon, N. and Falzon, L. and Pattison, P.},
+  title     = {Algebraic structures for dynamic networks},
+  journal   = {Journal of Mathematical Psychology},
+  year      = {2013},
+  volume    = {57},
+  number    = {6},
+  pages     = {310-319},
+  doi       = {10.1016/j.jmp.2013.11.002},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Koprinska2001,
   author    = {Koprinska, I. and Carrato, S.},
   title     = {Temporal video segmentation: A survey},
@@ -14388,7 +14626,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Kydros2015,
   author    = {Kydros, D. and Notopoulos, P. and Exarchos, G.},
-  title     = {Homer's {Iliad} - a social network analytic approach},
+  title     = {Homer's {Iliad} - A social network analytic approach},
   journal   = {International Journal of Humanities and Arts Computing},
   year      = {2015},
   volume    = {9},
@@ -14684,6 +14922,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.21},
   url       = {http://www.bruno-latour.fr/node/70},
+}
+
+@Article{Lauzen2005,
+  author    = {Lauzen, M. M. and Dozier, D. M.},
+  title     = {Maintaining the Double Standard: Portrayals of Age and Gender in Popular Films},
+  journal   = {Sex Roles},
+  year      = {2005},
+  volume    = {52},
+  number    = {7-8},
+  pages     = {437-446},
+  doi       = {10.1007/s11199-005-3710-1},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @Article{Lavin1998,
@@ -17729,6 +17980,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@Article{McRobbie2004,
+  author    = {McRobbie, A.},
+  title     = {Post-feminism and popular culture},
+  journal   = {Feminist Media Studies},
+  year      = {2004},
+  volume    = {4},
+  number    = {3},
+  pages     = {255-264},
+  doi       = {10.1080/1468077042000309937},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InProceedings{Meehan1977,
   author    = {Meehan, J. R.},
   title     = {{TALE-SPIN}, an interactive program that writes stories},
@@ -18317,6 +18581,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.26},
 }
 
+@Article{Moody2002,
+  author    = {Moody, J.},
+  title     = {The Importance of Relationship Timing for Diffusion},
+  journal   = {Social Forces},
+  year      = {2002},
+  volume    = {81},
+  number    = {1},
+  pages     = {25-56},
+  doi       = {10.1353/sof.2002.0056},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Moody2005,
   author    = {Moody, J. and McFarland, D. and Bender-deMoll, S.},
   title     = {Dynamic Network Visualization},
@@ -18823,6 +19100,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/ort.0.0040},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@Article{Mulvey1975,
+  author    = {Mulvey, L.},
+  title     = {Visual Pleasure and Narrative Cinema},
+  journal   = {Screen},
+  year      = {1975},
+  volume    = {16},
+  number    = {3},
+  pages     = {6-18},
+  doi       = {10.1093/screen/16.3.6},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @InProceedings{Mun2017,
@@ -19607,6 +19897,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2013.05.28},
 }
 
+@Article{Niehaus2014,
+  author    = {Niehaus, J. and Young, R. M.},
+  title     = {Cognitive models of discourse comprehension for narrative generation},
+  journal   = {Literary and Linguistic Computing},
+  year      = {2014},
+  volume    = {29},
+  number    = {4},
+  pages     = {561-582},
+  doi       = {10.1093/llc/fqu056},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InProceedings{Nielsen2011,
   author    = {Nielsen, F. A.},
   title     = {A new ANEW: Evaluation of a word list for sentiment analysis in microblogs},
@@ -19921,6 +20224,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Ireland_and_Scandinavia_in_the_Early_Vik.html?id=ncVmAAAAMAAJ},
+}
+
+@InCollection{ODay2004,
+  author    = {O'Day, M.},
+  title     = {Beauty in motion: gender, spectacle and action Babe cinema},
+  booktitle = {Action and Adventure Cinema},
+  publisher = {Routledge},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://stirling.rl.talis.com/items/3295D6A8-8CAB-6625-1518-93911485652E.html},
 }
 
 @InProceedings{ODonnell2008,
@@ -20263,6 +20577,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {http://revista-redes.rediris.es/pdf-vol21/vol21_2e.pdf},
+}
+
+@Article{Padgett2018,
+  author    = {Padgett, J. F.},
+  title     = {Faulkner's Assembly of Memories into History: Narrative Networks in Multiple Times},
+  journal   = {American Journal of Sociology},
+  year      = {2018},
+  volume    = {124},
+  number    = {2},
+  pages     = {406-478},
+  doi       = {10.1086/700831},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @Book{Page1988,
@@ -21535,6 +21862,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.16},
 }
 
+@Book{Purse2011,
+  title     = {Contemporary Action Cinema},
+  publisher = {Edinburgh University Press},
+  year      = {2011},
+  author    = {Purse, L.},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://books.google.fr/books?hl=en&lr=&id=cc9vAAAAQBAJ},
+}
+
 @Article{Pustejovsky2005,
   author    = {Pustejovsky, J. and Knippen, R. and Littman, J. and Saurí, R.},
   title     = {Temporal and Event Information in Natural Language Text},
@@ -21965,6 +22302,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://digitalcommons.andrews.edu/cgi/viewcontent.cgi?article=1135&context=dissertations},
 }
 
+@Article{Remmers2019,
+  author    = {Remmers, J. M.},
+  title     = {Temporal Dynamics in Covert Networks: A Case Study of the Structure behind the Paris and Brussels Attacks},
+  journal   = {Terrorism and Political Violence},
+  year      = {2019},
+  pages     = {1-24},
+  doi       = {10.1080/09546553.2019.1671373},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InProceedings{Ren2018,
   author    = {Ren, H. and Renoust, B. and Viaud, M.-L. and Mélançon, G. and Satoh, S.},
   title     = {Generating 'Visual Clouds' from Multiplex Networks for {TV} News Archive Query Visualization},
@@ -22148,6 +22496,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/3034956},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@Article{Ricoeur1980,
+  author    = {Ricoeur, P.},
+  title     = {Narrative Time},
+  journal   = {Critical Inquiry},
+  year      = {1980},
+  volume    = {7},
+  number    = {1},
+  pages     = {169-190},
+  doi       = {10.1086/448093},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @InProceedings{Rieck2016,
@@ -22941,6 +23302,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.24},
 }
 
+@Article{Ruegg2020,
+  author    = {Ruegg, C. and Lee, J. J.},
+  title     = {Epic social networks and Eve's centrality in Milton's Paradise Lost},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2020},
+  volume    = {35},
+  number    = {1},
+  pages     = {146-159},
+  doi       = {10.1093/llc/fqz001},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @Article{Ruhnau2000,
   author    = {Ruhnau, B.},
   title     = {Eigenvector-centrality - a node-centrality?},
@@ -23632,6 +24006,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://mildlyscientific.schochastics.net/2015/03/03/friends-and-hypergraphs-one-with-a/},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Book{Schubart2007,
+  title     = {Super Bitches and Action Babes: The Female Hero in Popular Cinema, 1970-2006},
+  publisher = {McFarland \& Co.},
+  year      = {2007},
+  author    = {Schubart, R.},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+  url       = {https://portal.findresearcher.sdu.dk/en/publications/super-bitches-and-action-babes-the-female-hero-in-popular-cinema-},
 }
 
 @Article{Schubert1968,
@@ -25302,6 +25686,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.12.31},
 }
 
+@Article{Sutherland2016,
+  author    = {Sutherland, J.-A. and Feltey, K. M.},
+  title     = {Here's looking at her: an intersectional analysis of women, power and feminism in film},
+  journal   = {Journal of Gender Studies},
+  year      = {2016},
+  volume    = {26},
+  number    = {6},
+  pages     = {618-631},
+  doi       = {10.1080/09589236.2016.1152956},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
+}
+
 @InCollection{Sutton2006,
   author    = {Sutton, C. and McCallum, A.},
   title     = {An Introduction to Conditional Random Fields for Relational Learning},
@@ -25636,6 +26033,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://dl.acm.org/citation.cfm?id=2981428},
+}
+
+@Book{Tasker2012,
+  title     = {Spectacular Bodies - Gender, Genre and the Action Cinema},
+  publisher = {Routledge},
+  year      = {2012},
+  author    = {Tasker, Y.},
+  doi       = {10.4324/9780203221846},
+  owner     = {Vincent},
+  timestamp = {2020.07.20},
 }
 
 @InProceedings{Taskiran2006,
