--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -757,6 +757,19 @@
   timestamp = {2019.04.08},
 }
 
+@Article{Allen1998,
+  author    = {Allen, A.},
+  title     = {Rethinking Power},
+  journal   = {Hypatia},
+  year      = {1998},
+  volume    = {13},
+  number    = {1},
+  pages     = {21-40},
+  doi       = {10.1111/j.1527-2001.1998.tb01350.x},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+}
+
 @InProceedings{Allen2010,
   author    = {Allen, N. D. and Templon, J. R. and McNally, P. S. and Birnbaum, L. and Hammond, K.},
   title     = {StatsMonkey: A Data-Driven Sports Narrative Writer},
@@ -1136,6 +1149,19 @@
   doi       = {10.1016/j.physd.2006.09.028},
   owner     = {Vincent},
   timestamp = {2015.09.18},
+}
+
+@Article{AnthonyCBleach2010,
+  author    = {Bleach, A. C.},
+  title     = {Postfeminist Cliques?: Class, Postfeminism, and the Molly Ringwald-John Hughes Films},
+  journal   = {Cinema Journal},
+  year      = {2010},
+  volume    = {49},
+  number    = {3},
+  pages     = {24-44},
+  doi       = {10.1353/cj.0.0209},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @InProceedings{Aone1995,
@@ -3360,6 +3386,16 @@
   timestamp = {2015.11.26},
 }
 
+@Book{Borgatti2013,
+  title     = {Analyzing Social Networks},
+  publisher = {Sage},
+  year      = {2013},
+  author    = {Borgatti, S. P. and Everett, M. G. and Johnson, J. C.},
+  owner     = {Vincent},
+  timestamp = {2019.04.20},
+  url       = {https://uk.sagepub.com/en-gb/eur/analyzing-social-networks/book255068},
+}
+
 @Article{Borge-Holthoefer2010,
   author    = {Borge-Holthoefer, J. and Arenas, A.},
   title     = {Semantic Networks: Structure and Dynamics},
@@ -3997,6 +4033,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.cambridge.org/fr/academic/subjects/languages-linguistics/sociolinguistics/politeness-some-universals-language-usage?format=PB&isbn=9780521313551},
+}
+
+@InCollection{Brown2004,
+  author    = {Brown, J. A.},
+  title     = {Gender, Sexuality, and Toughness: The Bad Girls of Action Film and Comic Books},
+  booktitle = {Action Chicks},
+  publisher = {Palgrave Macmillan},
+  year      = {2004},
+  pages     = {47-74},
+  doi       = {10.1057/9781403981240_3},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @Book{Brownrigg2001,
@@ -6319,6 +6367,32 @@
   doi       = {10.1017/cbo9780511576461},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@Article{Curtis2017,
+  author    = {Curtis, N.},
+  title     = {Wonder Woman's symbolic death: on kinship and the politics of origins},
+  journal   = {Journal of Graphic Novels and Comics},
+  year      = {2017},
+  volume    = {8},
+  number    = {4},
+  pages     = {307-320},
+  doi       = {10.1080/21504857.2017.1279198},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+}
+
+@Article{Curtis2017a,
+  author    = {Curtis, N. and Cardo, V.},
+  title     = {Superheroes and third-wave feminism},
+  journal   = {Feminist Media Studies},
+  year      = {2017},
+  volume    = {18},
+  number    = {3},
+  pages     = {381-396},
+  doi       = {10.1080/14680777.2017.1351387},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @Article{Czar2007,
@@ -9906,6 +9980,19 @@
   doi       = {10.1186/1471-2105-9-s9-s11},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Article{Gill2007,
+  author    = {Gill, R.},
+  title     = {Postfeminist media culture},
+  journal   = {European Journal of Cultural Studies},
+  year      = {2007},
+  volume    = {10},
+  number    = {2},
+  pages     = {147-166},
+  doi       = {10.1177/1367549407075898},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @Article{Gillespie2015,
@@ -13808,6 +13895,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/doi/book/10.5555/1104493},
 }
 
+@Article{Kirby2015,
+  author    = {Kirby, P.},
+  title     = {The Girl on Fire:The Hunger Games, Feminist Geopolitics and the Contemporary Female Action Hero},
+  journal   = {Geopolitics},
+  year      = {2015},
+  volume    = {20},
+  number    = {2},
+  pages     = {460-478},
+  doi       = {10.1080/14650045.2014.984835},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+}
+
 @Article{Kirkland2012,
   author    = {Kirkland, T. and Cunningham, W. A.},
   title     = {Mapping emotions through time: How affective trajectories inform the language of emotion},
@@ -14201,6 +14301,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.sigpro.2007.11.017},
   owner     = {Vincent},
   timestamp = {2018.07.09},
+}
+
+@Book{Kozloff2000,
+  title     = {Overhearing Film Dialogue},
+  publisher = {University of California Press},
+  year      = {2000},
+  author    = {Kozloff, S.},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+  url       = {https://www.ucpress.edu/book/9780520221383/overhearing-film-dialogue},
 }
 
 @Article{Kraft2003,
@@ -18666,6 +18776,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://psycnet.apa.org/record/2005-00641-000},
 }
 
+@Book{Moreno1934a,
+  title     = {Who Shall Survive? A New Approach to the Problem of Human Interrelations},
+  publisher = {Beacon House},
+  year      = {1934},
+  author    = {Moreno, J. L.},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+  url       = {https://archive.org/details/whoshallsurviven00jlmo},
+}
+
 @Book{Moretti1987,
   title     = {The Way of theWorld: The Bildungsroman in European Culture},
   publisher = {Verso},
@@ -20258,6 +20378,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.01},
 }
 
+@Article{Odumusi2016,
+  author    = {Odumusi, P.},
+  title     = {'Do You Think She's Pretty?': Femininity, Feminism and Teen Film},
+  journal   = {Journal of Promotional Communications},
+  year      = {2016},
+  volume    = {4},
+  number    = {1},
+  pages     = {54-84},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+  url       = {https://promotionalcommunications.org/index.php/pc/article/view/71},
+}
+
 @Article{Oelke2011,
   author    = {Oelke, D. and Janetzko, H. and Simon, S. and Neuhaus, K. and Keim, D. A.},
   title     = {Visual Boosting in Pixel-based Visualizations},
@@ -20354,6 +20487,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.14},
   url       = {https://dl.acm.org/citation.cfm?id=2391033},
+}
+
+@Article{OMeara2016,
+  author    = {O'Meara, J.},
+  title     = {What ``The Bechdel Test'' doesn't tell us: examining women's verbal and vocal (dis)empowerment in cinema},
+  journal   = {Feminist Media Studies},
+  year      = {2016},
+  volume    = {16},
+  number    = {6},
+  pages     = {1120-1123},
+  doi       = {10.1080/14680777.2016.1234239},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @Article{Onnela2005,
@@ -21741,6 +21887,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://uk.sagepub.com/en-gb/eur/social-network-analysis/book231856},
+}
+
+@Article{Press2016,
+  author    = {Press, A. and Liebes, T.},
+  title     = {Feminism and Hollywood: Why the backlash?},
+  journal   = {The Communication Review},
+  year      = {2016},
+  volume    = {19},
+  number    = {4},
+  pages     = {267-279},
+  doi       = {10.1080/10714421.2016.1237717},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @InProceedings{Prez2006,
@@ -25454,6 +25613,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1811.03214},
 }
 
+@Book{Stringer2013,
+  title     = {Movie Blockbusters},
+  publisher = {Routledge},
+  year      = {2013},
+  author    = {Stringer, J.},
+  doi       = {10.4324/9781315012919},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+}
+
 @Article{Strogatz2001,
   author    = {Strogatz, S. H.},
   title     = {Exploring complex networks},
@@ -26033,6 +26202,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://dl.acm.org/citation.cfm?id=2981428},
+}
+
+@Book{Tasker1993,
+  title     = {Spectacular Bodies: Gender, Genre and the Action Cinema},
+  publisher = {Routledge},
+  year      = {1993},
+  author    = {Tasker, Y.},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+  url       = {http://wrap.warwick.ac.uk/2988/},
 }
 
 @Book{Tasker2012,
