--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -7982,6 +7982,17 @@
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Elgammal2015,
+  author    = {Elgammal, A. M. and Saleh, B.},
+  title     = {Quantifying creativity in art networks},
+  booktitle = {6th International Conference on Computational Creativity},
+  year      = {2015},
+  pages     = {39-46},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+  url       = {https://arxiv.org/abs/1506.00711},
+}
+
 @PhdThesis{Elliot1992,
   author    = {Elliot, C.},
   title     = {The Affective Reasoner: A Process Model of Emotions in a Multi-agent System},
@@ -12298,6 +12309,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TMM.2017.2692650},
   owner     = {Vincent},
   timestamp = {2017.04.20},
+}
+
+@Book{Huck2015,
+  title     = {What Is Good Writing?},
+  publisher = {Oxford University Press},
+  year      = {2015},
+  author    = {Huck, G. J.},
+  doi       = {10.1093/acprof:oso/9780190212957.001.0001},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @Article{Huisman2003,
@@ -24039,6 +24060,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/40919258},
 }
 
+@Article{Saz2015,
+  author    = {Saz, O. and Lin, Y. and Eskenazi, M.},
+  title     = {Measuring the impact of translation on the accuracy and fluency of vocabulary acquisition of English},
+  journal   = {Computer Speech \& Language},
+  year      = {2015},
+  volume    = {31},
+  number    = {1},
+  pages     = {49-64},
+  doi       = {10.1016/j.csl.2014.11.005},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+}
+
 @Article{Scala2001,
   author    = {Scala, A. and Amaral, L. A. N. and Barthélémy, M.},
   title     = {Small-world networks and the conformation space of a short lattice polymer chain},
@@ -25106,6 +25140,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Article{Soleimani2015,
+  author    = {Soleimani, M. and Modirkhamene, S. and Sadeghi, K.},
+  title     = {Peer-mediated vs. individual writing: measuring fluency, complexity, and accuracy in writing},
+  journal   = {Innovation in Language Learning and Teaching},
+  year      = {2015},
+  volume    = {11},
+  number    = {1},
+  pages     = {86-100},
+  doi       = {10.1080/17501229.2015.1043915},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+}
+
 @InProceedings{Soleymani2008,
   author    = {Soleymani, M. and Chanel, G. and Kierkels, J. J. M. and Pun, T.},
   title     = {Affective Characterization of Movie Scenes Based on Multimedia Content Analysis and User's Physiological Emotional Responses},
@@ -25929,6 +25976,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.05},
   url       = {https://www.actaphys.uj.edu.pl/fulltext?series=Reg&vol=36&page=2537},
+}
+
+@InProceedings{Taghipour2016,
+  author    = {Taghipour, K. and Ng, H. T.},
+  title     = {A Neural Approach to Automated Essay Scoring},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2016},
+  pages     = {1882-1891},
+  doi       = {10.18653/v1/d16-1193},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
 }
 
 @Article{Taha2018,
